# livraria_log

./: Procfile  db.sqlite3  manage.py  pyproject.toml  requeriments.txt
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options_livro.py  0004_livro_autores_alter_livro_categoria_and_more.py  0005_compra.py  0006_itenscompra.py  0007_remove_itenscompra_compra_delete_compra_and_more.py  0008_compra_itenscompra.py
livraria_log/: .gitignore  asgi.py  requeriments.txt  settings.py  urls.py  wsgi.py
ll_livrarias/Scripts/: activate  activate.bat
