[tool.poetry]
name = "livraria"
version = "0.1.0"
description = "Projeto Livraria"
authors = ["Francisco S Junior <jwebsys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
